<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:id="@+id/textViewItemTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/buttonDelete"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/reminder_name"/>

    <TextView
        android:id="@+id/textViewItemMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewItemTheme"
        android:layout_alignParentStart="true"
        android:layout_marginTop="4dp"
        android:text="@string/reminder_message"/>

    <TextView
        android:id="@+id/textViewItemDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewItemMessage"
        android:layout_alignParentStart="true"
        android:layout_marginTop="4dp"
        android:text="@string/reminder_date"/>

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:text="@string/delete" />

</RelativeLayout>