<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/message_theme" />

    <EditText
        android:id="@+id/editTextMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextTheme"
        android:layout_marginTop="8dp"
        android:hint="@string/message_text"
        android:inputType="textMultiLine"
        android:maxLines="4" />

    <Button
        android:id="@+id/buttonPickDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextMessage"
        android:layout_marginTop="8dp"
        android:text="@string/choose_date_and_time" />

    <TextView
        android:id="@+id/textViewSelectedDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/buttonPickDateTime"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@id/buttonPickDateTime" />

    <Button
        android:id="@+id/buttonSaveReminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonPickDateTime"
        android:layout_marginTop="16dp"
        android:text="@string/save_reminder" />

    <ListView
        android:id="@+id/listViewReminders"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/buttonSaveReminder"
        android:layout_marginTop="16dp" />

</RelativeLayout>
